--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,7 +60,7 @@ textarea {
     border-radius: 5px;
     border-color: black;
     border-width: 2px;
-    height: 250px;
+    height: 350px;
     margin: 10px;
     resize: none;
     font-family: "roboto";
@@ -327,7 +327,7 @@ textarea {
 }
 
 .footButton:hover {
-    background-color: whitesmoke;
+    background-color: red;
     transition: 0.25s;
 }
 
@@ -345,4 +345,15 @@ textarea {
 
 #logo {
     background-color: rgb(106, 23, 180);
+}
+
+.hv64 {
+    width: 20%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#hair {
+    width: 110px;
 }
